--- a/src/css/main.pcss
+++ b/src/css/main.pcss
@@ -1,3 +1,5 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
+@import "@css/components/_components.pcss";
+
 @import "tailwindcss/utilities";
