--- a/src/css/components/_components.pcss
+++ b/src/css/components/_components.pcss
@@ -1,3 +1,4 @@
 @import "@css/components/card.pcss";
 @import "@css/components/nav-link.pcss";
 @import "@css/components/form-group.pcss";
+@import "@css/components/error.pcss";
