--- a/src/css/components/nav-link.pcss
+++ b/src/css/components/nav-link.pcss
@@ -1,9 +1,9 @@
 @layer components {
   .nav-link {
-    @apply p-2 rounded-md flex items-center transition-colors hover:bg-neutral-800 hover:text-white;
+    @apply p-2 rounded-md flex items-center transition-colors hover:bg-primary hover:text-white;
 
     &.active {
-      @apply bg-neutral-800 text-white;
+      @apply bg-primary text-white;
     }
 
     span {
