--- a/src/css/components/form-group.pcss
+++ b/src/css/components/form-group.pcss
@@ -7,7 +7,8 @@
 
     input[type="text"],
     input[type="email"],
-    input[type="password"] {
+    input[type="password"],
+    input[type="number"] {
       @apply py-2 px-4 border-gray-300 rounded-md w-full outline-none border focus:ring-1 focus-within:ring-secondary;
     }
   }
