--- a/src/css/components/card.pcss
+++ b/src/css/components/card.pcss
@@ -1,3 +1,5 @@
-.card {
-  @apply rounded-lg p-5 bg-white shadow-md;
+@layer components {
+  .card {
+    @apply rounded-lg p-5 bg-white shadow-md;
+  }
 }
